Enhance integration tests to check for correct update and launch.